fix: NO VERTICAL SCROLLBARS

--- a/src/app/contacts/add-contact/add-contact.scss
+++ b/src/app/contacts/add-contact/add-contact.scss
@@ -273,7 +273,23 @@ h1 {
     }
   }
 }
-
+@media (max-width: 1000px) {
+  .add-contact-container {
+    display:none;
+  }
+  .add-contact-container-mobile {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 5000;
+    overflow-y: auto;
+    padding: 32px 24px;
+  }
+}
 @media (max-width: 768px) {
   .add-contact-container {
     flex-direction: column;
